# brightness-automate

./: CMakeLists.txt  analysis.cpp  analysis.hpp  cameradatamanager.cpp  cameradatamanager.hpp  gradanalysis.cpp  gradanalysis.hpp  main.cpp  spline.hpp  test.cpp
